[tool.poetry]
name = "analysis_stock_mcp"
version = "0.1.0"
description = "MCP 기반 주식 분석 시스템"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
matplotlib = "^3.4.0"
yfinance = "^0.1.63"
requests = "^2.26.0"
python-dotenv = "^0.19.0"
openai = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 