[tool.poetry]
name = "st-mcp"
version = "0.1.0"
description = "Stock Market Analysis Tool"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
numpy = "^1.24.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
openai = "^1.0.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 